<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".city">
    <EditText
            android:layout_width="240dp"
            android:layout_height="62dp"
            android:inputType="textCapWords"
            android:hint="@string/textHintFindCity"
            android:ems="10"
            android:id="@+id/editTextCity"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:autofillHints=""
            android:textColorHint="#757575"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/editTextCity"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp" android:text="@string/enterCity"
            app:layout_constraintHorizontal_bias="0.498" android:onClick="findCityBut"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" android:onClick="finishThisActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>