<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".fr_1" android:background="@color/layout_back">
    <ImageView android:id="@+id/rectangle_2"
               android:src="@drawable/rectangle_2"
               android:contentDescription="rectangle_2"
               android:layout_width="match_parent"
               android:layout_height="200dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               app:srcCompat="@drawable/rectangle_2"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/frame_6"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="150dp"
                                                       android:layout_marginTop="18dp"
                                                       android:layout_alignParentTop="true">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="409dp"
                android:layout_height="30dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/constraintLayout">

            <TextView android:id="@+id/mon"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="14sp"
                      android:textColor="@color/text_color"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="@string/day1"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toStartOf="@+id/tue" android:fontFamily="@font/quicksand"/>
            <TextView android:id="@+id/tue"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="@string/day2"
                      app:layout_constraintStart_toEndOf="@+id/mon" app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toStartOf="@+id/wed" android:fontFamily="@font/quicksand"/>
            <TextView android:id="@+id/wed"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="@string/day3"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/tue"
                      app:layout_constraintEnd_toStartOf="@+id/thu"
                      android:fontFamily="@font/quicksand"/>
            <TextView android:id="@+id/thu"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="@string/day4"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/wed"
                      app:layout_constraintEnd_toStartOf="@+id/sat"
                      android:fontFamily="@font/quicksand"/>
            <TextView android:id="@+id/sat"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:text="@string/day5"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintStart_toEndOf="@+id/thu"
                      app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/quicksand"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout android:id="@+id/________________"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        >

            <TextView android:id="@+id/__10__ek1"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_marginLeft="0dp"
                      android:layout_marginTop="0dp"
                      android:layout_width="25dp"
                      android:layout_height="29.5dp"
                      android:text="@string/__10__ek1_string"
                      android:fontFamily="@font/quicksand"/>

            <TextView android:id="@+id/__10__ek2"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_marginLeft="69dp"
                      android:layout_width="25dp"
                      android:layout_height="29.5dp"
                      android:text="@string/__10__ek2_string"
                      android:layout_toEndOf="@+id/__10__ek1" android:layout_marginStart="47dp"
                      android:fontFamily="@font/quicksand"/>
            <TextView android:id="@+id/__10__ek3"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_marginLeft="141dp"
                      android:layout_marginTop="0dp"
                      android:layout_width="25dp"
                      android:layout_height="29.5dp"
                      android:text="@string/__10__ek3_string"
                      android:layout_toEndOf="@+id/__10__ek2" android:layout_marginStart="47dp"
                      android:fontFamily="@font/quicksand"/>

            <TextView android:id="@+id/__10__ek4"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_marginLeft="213dp"
                      android:layout_marginTop="0dp"
                      android:layout_width="25dp"
                      android:layout_height="29.5dp"
                      android:text="@string/__10__ek4_string"
                      android:layout_toEndOf="@+id/__10__ek3" android:layout_marginStart="47dp"
                      android:fontFamily="@font/quicksand"/>
            <TextView android:id="@+id/__10__ek5"
                      android:layout_gravity="center_horizontal|center"
                      android:gravity="center"
                      android:textSize="15sp"
                      android:textColor="@color/text_color"
                      android:layout_marginLeft="285dp"
                      android:layout_marginTop="0dp"
                      android:layout_width="25dp"
                      android:layout_height="29.5dp"
                      android:text="@string/__10__ek5_string"
                      android:layout_toEndOf="@+id/__10__ek4" android:layout_marginStart="47dp"
                      android:fontFamily="@font/quicksand"/>

        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                app:layout_constraintBottom_toTopOf="@+id/________________"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                android:id="@+id/constraintLayout2">

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"

                    android:id="@+id/imageView1"
                    android:layout_alignParentStart="true" android:layout_marginStart="0dp"
                    app:srcCompat="@drawable/icon1"/>
            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView1" android:layout_marginStart="47dp"
                    app:srcCompat="@drawable/icon2"/>
            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:layout_toEndOf="@+id/imageView2" android:layout_marginStart="47dp"
                    app:srcCompat="@drawable/icon3"/>
            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView4"
                    android:layout_toEndOf="@+id/imageView3" android:layout_marginStart="47dp"
                    app:srcCompat="@drawable/icon4"/>
            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView5"
                    android:layout_toEndOf="@+id/imageView4" android:layout_marginStart="47dp"
                    app:srcCompat="@drawable/icon5"/>
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>